<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home"
            tools:targetApi="o" />
        <item
            android:id="@+id/nav_clubs"
            android:icon="@drawable/ic_clubs_icon"
            android:title="@string/menu_clubs" />
        <item
            android:id="@+id/nav_challenges"
            android:icon="@drawable/ic_challenges_icon"
            android:title="@string/menu_challenge" />

        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/ic_about_icon"
            android:title="@string/menu_about_us"
            />
    </group>
</menu>